--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,8 @@ on:
     branches: [ "master", "main" ]
 
 jobs:
-
   build:
+    name: build
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
